<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="settings">Settings</string>
    <string name="enabled">Enabled</string>
    <string name="enable">OK</string>
    <string name="disabled">Disabled</string>
    <string name="language">Language</string>
    <string name="languages">Languages</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="saving">Saving&#8230;</string>
    <string name="allow">Allow</string>
    <string name="done">Done</string>
    <string name="locked">Locked</string>
    <string name="got_it">GOT IT</string>
    <string name="filter">Filter</string>
    <string name="use">Use</string>
    <string name="unknown">Unknown</string>
    <string name="alert_find_keyboard_and_switch_on">Switch on %1$s</string>
    <string name="alert_attention_messenger">RainbowKey keyboard treats users\' privacy seriously. We will NEVER collect any data like passwords or credit card numbers. </string>
    <string name="toast_enable_keyboard">Enable RainbowKey</string>
    <string name="toast_select_keyboard">Select RainbowKey</string>
    <string name="keyboard_guide_privacy_policy">By installing, you are agreeing to our %1$s\n and %2$s</string>
    <string name="text_terms_of_service">Terms of Service</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="sync_account_type">com.masterkeyboard.emoji.sync</string>
    <string name="dialog_title_select_keyboard_apply_rain">"Activate RainbowKey"</string>
    <string name="dialog_msg_select_keyboard_apply_rain">You need to activate RainbowKey keyboard to use this theme.</string>
    <string name="dialog_confirm_select_keyboard_apply_rain">ACTIVATE</string>
    <string name="dialog_title_enable_keyboard_home_rain">"Activate RainbowKey"</string>
    <string name="dialog_msg_enable_keyboard_home_rain">RainbowKey provides you with personalized keyboard themes and cute emojis.</string>
    <string name="add">ADD</string>
    <string name="key_layout_dialog_title">26 Key Layout</string>
    <string name="current_languages">Current Languages</string>
    <string name="available_languages">Available Languages</string>
    <string name="switch_language_tip">To switch languages from the keyboard, press and hold the space bar.</string>
    <string name="choose_language">Choose language</string>
    <string name="more_language">Add Language</string>
    <string name="language_dict">Languages</string>
    <string name="setting_preference_title">Preferences</string>
    <string name="setting_auto_correction">Auto-Correction</string>
    <string name="setting_auto_capitalization">Auto-Capitalization</string>
    <string name="setting_word_prediction">Prediction</string>
    <string name="setting_emoji_prediction">Emoji Prediction</string>
    <string name="setting_swipe_input">Swipe</string>
    <string name="setting_double_space_period">"." Shortcut</string>
    <string name="setting_double_space_period_summary">Double tapping the space bar will insert a period followed by a space.</string>
    <string name="setting_sound_on_keypress">Sound on keypress</string>
    <string name="setting_vibrate_on_keypress">Vibrate on keypress</string>
    <string name="setting_key_more" >setting_key_more</string>
    <string name="boost_noti_setting_desc" >Free up space and RAM to improve your phone\'s speed and performance. Contains sponsored contents.</string>
    <string name="boost_noti_setting_title" >Phone Boost</string>
    <string name="setting_key_call_assistant">setting_key_call_assistant</string>
    <string name="setting_call_assistant_title">Screen Flash for Calls</string>
    <string name="locker_switcher">locker_screen_enabled</string>
    <string name="enable_locker_detail">Displaying your favorite themes on lock screen. Contains sponsored contents.</string>
    <string name="screen_locker_enable_alert_toast">Screen Locker Enabled</string>
    <string name="setting_item_themes">Themes</string>
    <string name="setting_item_my_theme">Create Theme</string>
    <string name="setting_item_fonts">Fonts</string>
    <string name="setting_item_correction">@string/setting_auto_correction</string>
    <string name="setting_item_sounds">"Sounds"</string>
    <string name="setting_item_capitalization">@string/setting_auto_capitalization</string>
    <string name="setting_item_word_prediction">@string/setting_word_prediction</string>
    <string name="setting_item_swipe">Swipe</string>
    <string name="setting_item_add_languages">Add Language</string>
    <string name="setting_item_more_settings">More Settings</string>
    <string name="settings_button_sound">@string/setting_item_sounds</string>
    <string name="settings_button_tell_a_friend">Tell a friend</string>
    <string name="settings_button_tell_a_friend_tip">Share your message now</string>
    <string name="settings_button_tell_a_friend_content">Hey, you have to try the app RainbowKey keyboard. You can c͙u͙s͙t͙o͙m͙i͙z͙e͙ your keyboard with your own pictures! And the ⒻⓄⓃⓉⓈ and emojis are awesome. Download #RainbowKey For Free: http://rainbowkey.com</string>
    <string name="settings_button_auto_correction">@string/setting_auto_correction</string>
    <string name="settings_button_auto_capitalization">@string/setting_auto_capitalization</string>
    <string name="settings_button_word_prediction">@string/setting_word_prediction</string>
    <string name="settings_button_swipe">@string/setting_item_swipe</string>
    <string name="settings_button_add_language">@string/setting_item_add_languages</string>
    <string name="settings_button_more_settings">@string/setting_item_more_settings</string>
    <string name="settings_button_fonts">@string/setting_item_fonts</string>
    <string name="result_no">No GIFs or stickers found.</string>
    <string name="result_no_recent">No Recents.</string>
    <string name="result_no_suggestion">No suggested GIFs or stickers.</string>
    <string name="result_no_favorites">No Favorites.</string>
    <string name="result_no_data_on_fail">Please check your network and try again.</string>
    <string name="result_no_data_on_complete">No GIFs or stickers found.</string>
    <string name="emoji_search_title">Select emoji to search</string>
    <string name="emoji_search_hint">Search GIFs by text or emoji </string>
    <string name="customized_themes">Customized Keyboard</string>
    <string name="default_themes">RainbowKey Themes</string>
    <string name="custom_theme_create">Create</string>
    <string name="theme_more">More</string>
    <string name="theme_store_background_title">Create My Own Themes</string>
    <string name="theme_store_theme_title">RainbowKey Themes</string>
    <string name="theme_store_more">MORE</string>
    <string name="my_theme_customized_theme_title">Customized Keyboard</string>
    <string name="my_theme_downloaded_theme_title">Downloaded</string>
    <string name="theme_detail_recommend_title">You May Like</string>
    <string name="theme_card_custom_theme_default_name">My Theme</string>
    <string name="theme_detail_common_title_name">RainbowKey Theme</string>
    <string name="theme_detail_custom_theme_title_name">Customized Keyboard</string>
    <string name="theme_trial_keyboard_edit_text_hint">Try typing here now&#8230;</string>
    <string name="store_nav_download">My Downloads</string>
    <string name="tab_theme">THEME</string>
    <string name="tab_theme_my">MY THEME</string>
    <string name="tab_sticker">STICKER</string>
    <string name="tab_sticker_my">MY STICKER</string>
    <string name="tab_font">FONT</string>
    <string name="tab_font_my">MY FONT</string>
    <string name="item_sticker_more_coming">More Stickers Are Coming Soon</string>
    <string name="item_font_more_coming">More Fonts Are Coming Soon</string>
    <string name="dialog_app_usage_tips">For better typing experience across different apps, we recommend you to turn on apps with usage access.</string>
    <string name="dialog_agree">@string/allow</string>
    <string name="dialog_disagree">@string/cancel</string>
    <string name="dialog_app_usage_title">Allow Apps with Usage Access</string>
    <string name="theme_nav_theme_store">RainbowKey Store</string>
    <string name="theme_nav_my_themes">My Themes</string>
    <string name="theme_app_locker">App Locker</string>
    <string name="theme_nav_languages">Languages</string>
    <string name="theme_nav_settings">Settings</string>
    <string name="theme_nav_update">Update</string>
    <string name="theme_nav_no_ads">Remove Ads</string>
    <string name="theme_card_menu_download">Download</string>
    <string name="theme_card_menu_downloading">Downloading</string>
    <string name="theme_card_downloading_tip">Downloading...</string>
    <string name="theme_card_menu_share">Share</string>
    <string name="theme_card_set_locker_bg">Set As Lockscreen</string>
    <string name="theme_card_menu_apply">Apply</string>
    <string name="theme_card_menu_applied">Applied</string>
    <string name="theme_card_menu_delete">Delete</string>
    <string name="theme_share_text_content">My personalized keyboard made with #RainbowKey \n http://rainbowkey.com</string>
    <string name="theme_share_text_content_for_custom_theme">Customize your own keyboard with your favorite pictures! Download #RainbowKey For Free:\n http://rainbowkey.com</string>
    <string name="custom_theme_background">Background</string>
    <string name="custom_theme_font">Font</string>
    <string name="custom_theme_sound">Click Sound</string>
    <string name="custom_theme_effect">Tap Effect</string>
    <string name="custom_theme_backgrounds">backgrounds</string>
    <string name="custom_theme_fonts">fonts</string>
    <string name="custom_theme_sounds">click sounds</string>
    <string name="custom_theme_effects">tap effects</string>
    <string name="custom_theme_title">Create Keyboard</string>
    <string name="custom_theme_title_background">Choose Background</string>
    <string name="custom_theme_title_button_shape">Choose Button Shape</string>
    <string name="custom_theme_title_button_style">Choose Button Style</string>
    <string name="custom_theme_title_font">Choose Font</string>
    <string name="custom_theme_title_font_color">Choose Font Color</string>
    <string name="custom_theme_title_sound">Choose Click Sound</string>
    <string name="custom_theme_title_effect">Choose Tap Effect</string>
    <string name="custom_theme_sound_tip">To use click sound effect, please turn off the silent mode or enable Sound on keypress in the settings section.</string>
    <string name="purchase_error_message">Purchase Failed. Please try again later.</string>
    <string name="purchase_google_play_unavailable">Google Play purchases are not available on your device.</string>
    <string name="free_slots_used_up">Free Slots Used Up</string>
    <string name="free_slots_tip">You can create a maximum of %1$d free themes. Unlock unlimited slots to create more themes.</string>
    <string name="free_slots_price">Unlimited slots for %1$s</string>
    <string name="free_slots_via_watch_video">Watch Video to Unlock One Slot</string>
    <string name="apk_update_alert_title">Download Latest Version</string>
    <string name="apk_update_alert_negative_btn">LATER</string>
    <string name="apk_update_alert_positive_btn">UPDATE</string>
    <string name="uninstall_complete">Uninstall Completed</string>
    <string name="app_uninstalled_name">%1$s uninstalled</string>
    <string name="app_free_storage">You now have %1$s more free storage.</string>
    <string name="app_recommended">Recommended for you:</string>
    <string name="enable_charging_detail">Enable smart charging to optimize battery. Contains sponsored contents.</string>
</resources>