<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_theme_store"
            android:icon="@drawable/nav_theme_store_icon"
            android:title="@string/theme_nav_theme_store" />
        <item
            android:id="@+id/nav_app_locker"
            android:icon="@drawable/nav_app_locker_icon"
            android:title="@string/theme_app_locker" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/nav_language_icon"
            android:title="@string/theme_nav_languages" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_settings_icon"
            android:title="@string/theme_nav_settings" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/nav_update_icon"
            android:title="@string/theme_nav_update"
            app:actionLayout="@layout/apk_update_indication_icon"
            />
        <item
            android:id="@+id/nav_no_ads"
            android:icon="@drawable/nav_no_ads_icon"
            android:title="@string/theme_nav_no_ads"/>

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/nav_privacy_icon"
            android:title="@string/text_privacy_policy"/>
    </group>

    <group
        android:visible="false"
        android:id="@+id/menu_debug"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_debug"
            android:icon="@drawable/nav_debug_icon"
            android:title ="@string/navigation_menu_item_debug" />
    </group>

</menu>
