<?xml version="1.0" encoding="utf-8"?>
<com.ihs.inputmethod.uimodules.ui.theme.ui.view.HSCommonHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#32323c"
    app:theme="@style/ThemeOverlay.AppCompat.Dark">

    <Button
        android:id="@+id/custom_theme_title_cancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical|left"
        android:minWidth="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/cancel"
        android:textColor="@drawable/custom_theme_head_common_button_selector" />

    <TextView
        android:id="@+id/custom_theme_title_title"
        style="@style/UiModuleThemeTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/custom_theme_title"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/custom_theme_title_ok"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_vertical|right"
        android:minWidth="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/next"
        android:textColor="@drawable/custom_theme_head_common_button_selector" />

</com.ihs.inputmethod.uimodules.ui.theme.ui.view.HSCommonHeaderView>