<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="@dimen/purchase_slot_dialog_width"
    android:layout_height="@dimen/purchase_slot_dialog_height"
    android:layout_gravity="center"
    android:background="@drawable/round_rectangle_white_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/purchase_slot_dialog_margin"
        android:layout_marginLeft="@dimen/purchase_slot_dialog_margin"
        android:layout_marginRight="@dimen/purchase_slot_dialog_margin"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="133dp"
            android:layout_height="94dp"
            android:src="@drawable/free_slots_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/free_slots_used_up"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_free_slots_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/free_slots_tip"
            android:textColor="#000000"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_unlock_all_slots"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/free_slots_price"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/watch_video_unlock_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/watch_video_unlock_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:text="@string/free_slots_via_watch_video"
                    android:textColor="#d04bee"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:background="@color/transparent"
                    android:src="@drawable/video_icon" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/btn_close_dialog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="right"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/purchase_slot_dialog_margin">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_close" />
    </FrameLayout>
</FrameLayout>