<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/apk_update_alert_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/apk_update_alert_top_icon_margin"
        android:src="@drawable/update_alert_icon" />

    <!-- layout title -->

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/apk_update_alert_title"
        android:textColor="#dd000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:maxLines="3"
        android:text="@string/apk_update_alert_message"
        android:textColor="#89000000"
        android:textSize="16sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/apk_update_alert_negative_btn_bg_selector"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/apk_update_alert_negative_btn"
            android:textColor="#89000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/apk_update_alert_positive_btn_bg_selector"
            android:elevation="@dimen/apk_update_alert_btn_elevation"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/apk_update_alert_positive_btn"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>